# camlin-backend-test

./: .env.example  .gitignore  Dockerfile  README.md  TODO.md  generate_token.py  main.py  pyproject.toml  requirements.txt  wallet.db
.github/workflows/: CI.yml
.postman/: CamlinGroup.postman_collection.json
src/camlin_backend_test.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/controllers/: wallet_controller.py
src/core/: init.py
src/db/: wallet_db.py
src/middleware/: currency_validator.py  validators.py
src/models/: wallet.py
src/services/: auth_service.py  exchange_service.py  wallet_service.py
test/: test_wallet.py
test/controllers/: test_wallet_controller.py
test/services/: test_wallet_service.py
